# website-beta-replit

./: .replit  DATA_UPLOAD_README.md  EVENTBRITE_SCRAPER_README.md  README.md  SHELL_SCRIPTS_USAGE.md  app.py  combined_concerts.csv  content.py  create_favicon_set.py  create_instagram_post.py  create_og_image.py  create_square_thumbnail.py  dataUpload.py  enhanced_eventbrite_scraper.py  eventbrite_parser.py  eventbrite_scraper.py  extracted_concerts.csv  markdown.py  pyproject.toml  quick_scrape.sh  real_concert_scraper.py  replit.md  robots.txt  run.py  sample_concerts.csv  save_page5_markdown.py  scrape_eventbrite_pages.sh  scraped_concerts.csv  sitemap.xml  strathmore_format_sample.csv  strathmore_parser.py
attached_assets/: content-1749781800512.md  content-1750286233795.md  content-1750435595501.md  content-1750435935735.md  demo.md  final_1750684466518.csv  page5_content.md
client/: index.html
client/public/: manifest.json
client/src/: index.css
client/src/components/: animated-vote-counter.tsx  concert-gallery.tsx  concert-search-old.tsx  concert-search.tsx  confetti-celebration.tsx  featured-concert.tsx  piano-fallback.tsx  rankings.tsx  social-share.tsx  user-badges.tsx  vote-animation.tsx
client/src/hooks/: use-session.ts  use-timer.ts
client/src/lib/: dateUtils.ts
client/src/pages/: home-simple.tsx  home.tsx
server/: db.ts  routes.ts  storage.ts
shared/: badges.ts  dateUtils.ts  schema.ts
temp_scrape_3443/: page_2_log.txt  page_3.csv  page_3_log.txt
